Clustering error Fix

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "apexcharts": "^3.26.2",
     "bootstrap": "^3.4.1",
+    "ng-apexcharts": "^1.5.9",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.0",
