--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -23,6 +23,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
+            "allowedCommonJsDependencies": ["apexcharts"],
             "assets": [
               "src/favicon.ico",
               "src/assets"
